--- a/index.html
+++ b/index.html
@@ -7,9 +7,44 @@
     <title>G3</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<h1>hello</h1>
 
-<body>
+<body class="work-sans-fonts">
+    <header class="bg-header">
+        <nav class="navbar display-flex">
+            <div class="heading-holder">
+                <h3 class="dark-2"> G3 Architects </h3>
+            </div>
+            <div class="ul-holder">
+                <ul class="nav-link">
+                    <li><a href="" class="dark-2">Home</a></li>
+                    <li><a href="" class="dark-2">About</a></li>
+                    <li><a href="" class="dark-2">Contact Us</a></li>
+                    <li><a href="" class="dark-2">Login</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="banner-text display-flex">
+            <h1 class="dark-1">Brand New <br>
+                Group of Architects
+            </h1>
+            <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have
+                suffered alteration
+                in some form, by injected humour or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+        </div>
+        <div class="header-img-container display-flex">
+            <img class="header-image" src="images/banner.png" alt="">
+        </div>
+
+    </header>
+
+    <main>
+        <section class="first-section"></section>
+    </main>
+
+    <footer>
+
+    </footer>
 
 </body>
 
